[omnibox] Check pop-up line state to decide keyword state

StartAutocomplete() is passing the wrong cursor position because
it is treating an edge case of entering keyword mode as already being
in keyword mode.

ClearKeyword() compares pop-up model selected line state to
OmniboxPopupModel::KEYWORD to decide keyword state. StartAutocomplete()
needs the same test and can use it instead the more rigid
keyword hint.

Bug: 794407
Change-Id: Iced2f76c4ee74ff4583f68f99f090f36d84a8c70